Bug 338771 - Show video defaults to enabled when an audio only call is received.
Summary: Show video defaults to enabled when an audio only call is received.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: call-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-03 05:52 UTC by Diane Trout
Modified: 2014-09-11 13:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diane Trout 2014-09-03 05:52:32 UTC
When calling myself with an audio only call I noticed the show video icon defaulted to on. which it shouldn't

Reproducible: Always

Steps to Reproduce:
make audio call.

Actual Results:  
look at empty "show my local video" square

Expected Results:  
no "show my local video" square
Comment 1 Diane Trout 2014-09-08 17:34:54 UTC
Git commit b35cd21db82f3c31a4508fe8c85252d5b37ef5e2 by Diane Trout.
Committed on 08/09/2014 at 05:40.
Pushed by dtrout into branch 'master'.

Only show local video if the call has video content.
REVIEW: 120098

M  +5    -2    src/call-window.cpp

http://commits.kde.org/telepathy-call-ui/b35cd21db82f3c31a4508fe8c85252d5b37ef5e2