Only show local video if the call has video content.

BUG: 338771
REVIEW: 120098